--- a/src/locale/ru-RU.json
+++ b/src/locale/ru-RU.json
@@ -1,6 +1,6 @@
 {
   "COMPRESS_NO_IMAGES_ERROR": "Текущая папка не содержит изображений",
-  "COMPRESS_WATCH_WARNING": "Параметр --force активен, поэтому все ранее обработанные изображения будут обработаны повторно",
+  "COMPRESS_FORCE_WARNING": "Параметр --force активен, поэтому все ранее обработанные изображения будут обработаны повторно",
   "CONFIG_TITLE": "Настройки",
   "CONFIG_TEXT": "Пожалуйста, заполните все необходимые поля",
   "CONFIG_ERROR": "Задайте корректное имя папки",
@@ -52,6 +52,7 @@
   "TIME_INSTANT": "очень быстро",
   "VERSION_TITLE": "Текущая версия:",
   "VERSION_LATEST_TITLE": "Последняя версия:",
+  "VERSION_LATEST_ERROR": "Не удалось проверить последнюю версию",
   "VERSION_TEXT": "Обновитесь до последней версии, запустив команду:",
   "WATCH_TITLE": "Слежение за изменением файлов..."
 }
