--- a/src/locale/en-US.json
+++ b/src/locale/en-US.json
@@ -4,6 +4,7 @@
   "CONFIG_TITLE": "Settings",
   "CONFIG_TEXT": "Please fill in all required fields",
   "CONFIG_ERROR": "Set correct folder name",
+  "CONFIG_SUCCESS": "Settings saved successfully",
   "CONFIG_FOLDER_NAME": "Compressed images folder name:",
   "HELP_NAME": "Tiny Compressor",
   "HELP_DESCRIPTION": "A command line JPG, PNG and WebP images compressor using TinyPNG API",
@@ -32,6 +33,7 @@
   "RESET_TEXT_1": "After clearing cache, information about previously processed images will be deleted.",
   "RESET_TEXT_2": "All processed files will be re-sent to TinyPNG server again, which may reduce image limit.",
   "RESET_QUESTION": "Proceed?",
+  "RESET_SUCCESS": "Settings saved successfully",
   "SPINNER_START_TEXT": "File processing...",
   "SPINNER_START_FORCE_TEXT": "Reprocessing a file...",
   "SPINNER_SUCCESS_TEXT": "Completed",
