--- a/src/locale/ru-RU.json
+++ b/src/locale/ru-RU.json
@@ -4,6 +4,7 @@
   "CONFIG_TITLE": "Настройки",
   "CONFIG_TEXT": "Пожалуйста, заполните все необходимые поля",
   "CONFIG_ERROR": "Задайте корректное имя папки",
+  "CONFIG_SUCCESS": "Настройки обновлены",
   "CONFIG_FOLDER_NAME": "Имя папки с обработанными изображениями:",
   "HELP_NAME": "Tiny Compressor",
   "HELP_DESCRIPTION": "Компрессор JPG, PNG и WebP изображений, использующий TinyPNG API.",
@@ -32,6 +33,7 @@
   "RESET_TEXT_1": "После очистки кеша информация о ранее обработанных изображениях будет удалена.",
   "RESET_TEXT_2": "Это вызовет повторную отправку файлов на сервер TinyPNG, что может привести к уменьшению лимита на количество изображений.",
   "RESET_QUESTION": "Продолжить?",
+  "RESET_SUCCESS": "Настройки обновлены",
   "SPINNER_START_TEXT": "Обработка файла...",
   "SPINNER_START_FORCE_TEXT": "Повторная обработка файла...",
   "SPINNER_SUCCESS_TEXT": "Готово",
